# dicta-onnx

./: .gitignore  README.md  infer.py  main.py  pyproject.toml  special_tokens.json  tokenizer_config.json
examples/: quanitized.py  simple.py  with_male_haser.py  with_transformers.py
scripts/: export.py
src/: config.json  export.py  infer.py  tokenizer.json  vocab.txt  with_pytorch.py
src/dicta_onnx/: __init__.py  model.py
