[project]
name = "dicta-onnx"
version = "1.0.1"
description = "Add diacritics to Hebrew text using Dicta model"
readme = "README.md"
authors = [
    { name = "thewh1teagle", email = "61390950+thewh1teagle@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    "onnxruntime>=1.21.0",
    "torch>=2.6.0",
    "transformers>=4.50.3",
]
[project.urls]
Homepage = "https://github.com/thewh1teagle/dicta-onnx"
Repository = "https://github.com/thewh1teagle/dicta-onnx"
Issues = "https://github.com/thewh1teagle/dicta-onnx/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
